<resources>
    <string name="app_name">EdukgUser</string>
    <string name="me">我</string>
    <string name="login">登录</string>
    <string name="phone">手机号</string>
    <string name="password">密码</string>
    <string name="home">首页</string>
    <string name="qa">问答</string>
    <string name="function">功能</string>
    <string name="qahint">聪明的机器人即将为您解答疑惑，请选择学科并输入问题的大致描述</string>
    <string name="subject">学科</string>
    <string name="qa2">请输入想要查询的内容</string>
    <string name="query">查询</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">favorite</string>
    <string name="search">search</string>
    <string name="more">more</string>
    <string name="main_tile">Home</string>
    <string name="edukg_app">知识图谱·智慧教育</string>
    <string name="my_favourites">我的收藏</string>
    <string name="browsing_history">历史浏览</string>
    <string name="study_report">学习日报</string>
    <string name="username">username</string>
    <string name="phone_number">Phone number</string>
    <string name="register">注册</string>
    <string name="testTitle">试题推荐</string>
    <string name="logout">登出</string>
    <string name="weibosdk_demo_share_to_weibo_title">新浪微博分享</string>
    <string name="weibosdk_demo_share_text_title">分享文字</string>
    <string name="weibosdk_demo_share_default_text">分享内容</string>
    <string name="weibosdk_demo_share_text_template">我正在使用微博客户端发博器分享文字</string>
    <string name="weibosdk_demo_toast_share_success">分享成功</string>
    <string name="weibosdk_demo_toast_share_failed">分享失败</string>
    <string name="weibosdk_demo_toast_share_canceled">取消分享</string>
    <string name="local_cache">本地缓存</string>
    <string name="recommended_exam">试题推荐</string>
</resources>