<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_36dp"
        android:title="@string/home"/>
    <item
        android:id="@+id/navigation_query"
        android:enabled="true"
        android:icon="@drawable/ic_help_outline_black_36dp"
        android:title="@string/qa"/>
    <item
        android:id="@+id/navigation_functions"
        android:enabled="true"
        android:icon="@drawable/ic_dashboard_black_36dp"
        android:title="@string/function"/>
    <item
        android:id="@+id/navigation_me"
        android:enabled="true"
        android:icon="@drawable/ic_person_black_36dp"
        android:title="@string/me"/>
</menu>