<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="15dp"
    android:gravity="center">



    <EditText
        android:id="@+id/login_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:hint="@string/phone"
        android:inputType="phone"
        android:maxLines="1"
        android:background="@drawable/bg_btn_grey_rounded_rectangle"
        android:paddingHorizontal="10dp"
        android:drawableStart="@drawable/smartphone"
        android:drawablePadding="5dp" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:hint="@string/password"
        android:layout_below="@+id/login_phone"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:background="@drawable/bg_btn_grey_rounded_rectangle"
        android:paddingHorizontal="10dp"
        android:drawableStart="@drawable/password"
        android:drawablePadding="5dp"/>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/login_password"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_btn_blue_pressed"
        android:textSize="16sp"
        android:text="@string/login"/>

</RelativeLayout>