<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <include layout="@layout/bar_top"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profile_img"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:columnCount="3">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/fav_card"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        app:srcCompat="@drawable/archive_box"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"/>
                    <Button
                        android:id="@+id/btn_favourites"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/my_favourites"
                        android:textAlignment="center"
                        android:textAppearance="?attr/textAppearanceBody1"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/his_card"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        app:srcCompat="@drawable/view_history"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"/>
                    <Button
                        android:id="@+id/btn_browsing_history"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/browsing_history"
                        android:layout_gravity="center"
                        android:textAppearance="?attr/textAppearanceBody1"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/local_cache_card"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        app:srcCompat="@drawable/local_cache"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"/>
                    <Button
                        android:id="@+id/btn_local_cache"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/local_cache"
                        android:layout_gravity="center"
                        android:textAppearance="?attr/textAppearanceBody1"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/report_card"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_row="0"
                        android:layout_column="3"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/daily_report_f"/>
                    <Button
                        android:id="@+id/btn_report"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/study_report"
                        android:textAppearance="?attr/textAppearanceBody1"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </GridLayout>

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/btn_login"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBody1"
            android:text="@string/login"/>

        <Button
            android:id="@+id/btn_register"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBody1"
            android:text="@string/register"/>

        <Button
            android:id="@+id/btn_logout"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textAppearance="?attr/textAppearanceBody1"
            android:visibility="gone" />
    </LinearLayout>


</LinearLayout>
